--- a/sample_attributes.yml
+++ b/sample_attributes.yml
@@ -1,10 +1,11 @@
+benchmark_version: 1.3.0
 trusted_user: vagrant
 managable_container_number: 25
 registry_cert_path: /etc/docker/certs.d
 registry_name: /etc/docker/certs.d/registry_hostname:port
 registry_ca_file: /etc/docker/certs.d/registry_hostname:port/ca.crt
 container_user: vagrant
-container_capadd: null
+container_capadd: NET_ADMIN,SYS_ADMIN
 authorization_plugin: authz-broker
 log_driver: syslog
 log_opts: /syslog-address/
